[metadata]
name = pudzu-charts
version = 0.9.1
description = Pillow-based charting tools
keywords = pudzu, charts, pillow
url = https://github.com/Udzu/pudzu-packages/pudzu-charts/

author = Uri Granta
author_email = uri.granta+python@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = MIT

[options]
python_requires = >=3.6
install_requires =
    pudzu-dates
    pudzu-pillar
    pandas
