[metadata]
name = pudzu-dates
version = 0.9.1
description = Date classes supporting flexible calendars, date deltas and ranges
keywords = pudzu, date, calendar
url = https://github.com/Udzu/pudzu-packages/pudzu-dates/

author = Uri Granta
author_email = uri.granta+python@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = MIT

[options]
python_requires = >=3.6
install_requires = pudzu-utils

[tool:brunette]
line-length = 100

