[metadata]
name = pudzu-pillar
version = 0.9.2
description = Various imaging utilities, monkey-patched onto Pillow
keywords = pudzu, imaging, pillow
url = https://github.com/Udzu/pudzu-packages/pudzu-pillar/

author = Uri Granta
author_email = uri.granta+python@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = MIT

[options]
python_requires = >=3.6
install_requires =
    pudzu-utils
    Pillow
    numpy

[tool:brunette]
line-length = 100

