[tool.poetry]
name = "pudzu-utils"
version = "0.9.2"
description = "Various utility functions and data structures used by the other pudzu packages"
keywords = ["pudzu", "utilities"]

authors = ["Uri Granta <uri.granta+python@gmail.com>"]
homepage = "https://github.com/Udzu/pudzu-packages/pudzu-utils/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
black = { version = "*", allow-prereleases = true }
isort = "*"
taskipy = "*"

[tool.taskipy.tasks]
pylint = "pylint --pylint-rcfile=extrapylint pudzu"
mypy = "mypy pudzu"
black = "black pudzu"
isort = "isort pudzu"
format = "task isort && task black"
check = "task mypy && task pylint"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 100

