[metadata]
name = pudzu-utils
version = 0.9.1
description = Various utility functions and data structures used by the other pudzu packages
keywords = pudzu, utilities
url = https://github.com/Udzu/pudzu-packages/pudzu-utils/

author = Uri Granta
author_email = uri.granta+python@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = MIT

[options]
python_requires = >=3.6
install_requires = toolz
